# devLauncher

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  README.md  fix_skill.py  index.html  launcher-entry-modes-research-plan.md  package-lock.json  plan-remoteDeskP2p.md  project-plan.md  v1.md
.agents/plugins/: marketplace.json
.codebuddy/rules/: dev-launcher.mdc
.codebuddy/skills/dev-launcher/: SKILL.md
.github/instructions/: dev-launcher.instructions.md
.github/workflows/: deploy-website.yml
app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
app/scripts/: build-mac-release.sh  dev-mac-signed.sh
app/src/: App.tsx  ClipboardApp.tsx  JsonHelperApp.tsx  TotpApp.tsx  index.css  main.tsx  mainWindowControl.ts  windowPinning.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: actions.rs  cloud_sync.rs  config.rs  entries.rs  keyboard_control_tap.rs  lib.rs  macos_translate.swift  main_window_control.rs  ocr.rs  platform.rs  plugin_manager.rs  plugin_manifest.rs  translation.rs  types.rs  video_tools.rs  window_pinning.rs  workflow.rs
app/src-tauri/src/builtins/: clipboard.rs  json.rs  mod.rs  projectconfigs.rs  projecttasks.rs  quickmemory.rs  remotedesk.rs  remotedesk_rdp.rs  screenshot.rs  screenshotai.rs  terminal.rs  totp.rs  webaccounts.rs
app/src-tauri/src/utils/: favicon.rs  icon.rs  image.rs  mod.rs
app/src/api/: cloudSync.ts  config.test.ts  config.ts  theme.ts  workflow.test.ts  workflow.ts  workflowTemplates.ts
app/src/builtins/: _registry.ts  screenshotStore.ts  types.ts
app/src/components/: ActionIcon.tsx  BindingModal.tsx  BuiltinIcon.tsx  ClipboardPanel.tsx  ConfirmDialog.tsx  KeyCell.tsx  KeyboardPanel.tsx  MacWindowControls.tsx  PluginCenter.tsx  SettingsPanel.tsx  ThemeRuntime.tsx  WindowPinButton.tsx  WorkflowPanel.tsx  actionIconIdentity.test.ts  actionIconIdentity.ts  clipboardPanelModel.test.ts  clipboardPanelModel.ts  keyboardHoverState.test.ts  keyboardHoverState.ts  workflowTerminal.test.ts  workflowTerminal.ts
app/src/entry/: BrowserPreviewApp.tsx  OcrEntryApp.tsx  PetEntryApp.tsx  PetRadialMenu.tsx  SearchEntryApp.tsx  SearchPanel.tsx  UiAuditPreviewApp.tsx  WorkflowPreviewApp.tsx  entryEvents.ts  petCodexStatus.ts  (+7 more)
docs/: DevLauncher产品说明书-v0.2.0.docx  devlauncher-code-conventions.md  devlauncher-pet-mcp.md  devlauncher-project-index.md  devlauncher-ui-final-spec.md
docs/features/: README.md  devops-test-developer-automation.md
docs/prototypes/: clipboard-floating-shelf-style.html  devlauncher-final-ui-prototype.html
logo/ios_cat_logo_set/: README.txt
marketplace/: README.md  marketplace.json
mcp/: devlauncher-automation-mcp.mjs  devlauncher-pet-mcp.mjs
plugins/devlauncher-automation/: .mcp.json  README.md
plugins/devlauncher-pet/: .mcp.json  README.md
prototypes/workflow-composer/: index.html
scripts/: check-utf8.ps1  pet-status.mjs  publish-github-release.sh  test-automation-mcp.mjs
sync-api/: Containerfile  README.md  package.json  schema.sql
sync-api/deploy/: nginx-devlauncher.conf
sync-api/src/: server.mjs
website/: .gitignore  README.md  index.html  package.json  server.mjs
website/scripts/: build.mjs  run-dev.ps1  start-dev.ps1  status-dev.ps1  stop-dev.ps1  tail-log.ps1
website/src/: main.js  styles.css
(+179 files in other folders)
