[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
open = "5"
arboard = "3"
keyring = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Remote desktop: screen capture + WebSocket streaming
# Use screenshots (GDI-based) instead of scrap (DXGI) for better Windows compatibility
screenshots = "0.8"
enigo = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
rand = "0.8"
ureq = "2"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

